# tauri-chatglm

./: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
src/: App.css  App.tsx  Layout.tsx  global.css  index.module.less  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: favicon.icns
src-tauri/src/: lib.rs  main.rs  news.rs
src/Header/: index.module.less  index.tsx
src/pages/Chat/: index.module.less  index.tsx
src/pages/History/: index.module.less  index.tsx
src/pages/More/: index.tsx
src/pages/Setting/: index.module.less  index.tsx
src/redux/: store.ts
src/redux/slices/: chat.ts  common.ts  news.ts
src/sw/: sw.js
src/utils/: chatglm.ts
