[package]
name = "tauri_test_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_test_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1"
window-vibrancy = "0.5.2"
reqwest = { version = "0.12", features = ["blocking"] }
log = "0.4"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3"
tauri-plugin-log = "2"
scraper = "0.22"
